did some changes in nav-bar when in burger menu mode, finished fixing Esthers code and the -Our Services- and each one of them look align and centered with each other throughtout the responsive tests. Also all media queries except the opacity one are gone.

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ body {
 /* ==================HOW-IT-WORKS==========*/
 
 .how-it-works-container {
-    padding-top: 70px;
+    padding-top: 90px;
     padding-bottom: 20px;
 }
 
@@ -177,7 +177,7 @@ body {
 /* ==================SERVICES==========*/
 
 .services-container {
-    padding-top: 30px;
+    padding-top: 70px;
 }
 
 .services-title {
@@ -186,43 +186,93 @@ body {
 }
 
 .services-banner {
+    padding-top: 80px;
     position: relative;
     text-align: center;
     color:black;
     text-shadow: grey;
-    font-size: 0.7cm;
-    height: 200px;
-    padding: 5px;
+    height: 675px;
     padding-left: 10px ;
     padding-right: 10px ;
+}
+
+.carpentry-service {
+    height: 225px;
+    background-image:url( "./img/img-carpenter.jpg");
+    background-position: center;
+    background-size: cover;
     opacity: 50%;
-} 
+}
+
+.carpentry-service li {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 50%;
+}
+
+.carpentry-service a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 27px;
+}
+
+.painting-service {
+    height: 225px;
+    background-image: url( "./img/img-painter.jpg");
+    background-position: center;
+    background-size: cover;
+    opacity: 50%;
+}
+
+.painting-service li {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 50%;
+}
+
+.painting-service a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 27px;
+}
+
+.plumbing-service {
+    height: 225px;
+    background-image: url("./img/img-plumber.jpg");
+    background-position: center;
+    background-size: cover;
+    opacity: 50%;
+}
+
+.plumbing-service li {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 50%;
+}
+
+.plumbing-service a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 27px;
+}
   
-  .img-plumber{
-      background-image: url("./img/img-plumber.jpg");
-  }
-  
-  .img-painter{
-      background-image: url( "./img/img-painter.jpg");
-  }
-  
-  .img-carpenter{
-      background-image:url( "./img/img-carpenter.jpg") ;
-  }
-  
-  .img-services {
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      height: 100%;
-      transition: .5s ease;
-      backface-visibility: hidden;
-  }
-  
-  .specific-block:hover {
-    opacity: 100%;   
-    
-  }
+.carpentry-service:hover {
+    opacity: 100%;
+    transition: .5s ease;
+}
+
+.painting-service:hover {
+    opacity: 100%;
+    transition: .5s ease;
+}
+
+.plumbing-service:hover {
+    opacity: 100%;
+    transition: .5s ease;
+}
 
   /* ==================FOOTER==========*/
       
@@ -380,6 +430,7 @@ body {
         bottom: 100%;
         background-color: rgba(0, 0, 0, 0.97);
         flex-direction: column;
+        justify-content: space-evenly;
         width: auto;
         height: auto;
         overflow: hidden;
@@ -390,13 +441,25 @@ body {
         color: #ffffff;
     }
     .nav-links-container a:hover {
-        color: #ffffff;
+        color: #ffb23d;
     }
     .nav-bar-container :checked ~ .nav-links-container {
         bottom: 0;
     }
     .nav-bar-icon-burger {
         display: block;
+    }
+    .nav-bar-container :checked ~.nav-bar-icon-burger .line:nth-child(1) {
+        transform: translateY(8px) rotate(225deg);
+    }
+    .nav-bar-container :checked ~.nav-bar-icon-burger .line:nth-child(3) {
+        transform: translateY(-8px) rotate(-225deg);
+    }
+    .nav-bar-container :checked ~.nav-bar-icon-burger .line:nth-child(2) {
+        opacity: 0%;
+    }
+    .nav-bar-icon-burger .line {
+        height: 2px;
     }
     .nav-logo-container {
         justify-content: flex-start;
@@ -446,70 +509,16 @@ body {
   /* ==================SERVICES-QUERIES==========*/
 
 @media (max-width: 1024px) {
-      .specific-block {
-          opacity: 100%;
-      }
-      .tittle {
-        position: absolute;
-        top: 50%;
-        left: 44%;
+    .carpentry-service {
+        opacity: 100%;
+    }
+    .painting-service {
+        opacity: 100%;
+    }
+    .plumbing-service {
+        opacity: 100%;
     }
   }
-
-  @media (max-width: 930px) {
-    .specific-block {
-        opacity: 100%;
-    }
-    .tittle {
-        position: absolute;
-        top: 50%;
-        left: 43.5%;
-    }
-    
-}
-
-@media (max-width: 725px) {
-    .specific-block {
-        opacity: 100%;
-    }
-    .tittle {
-        position: absolute;
-        top: 50%;
-        left: 42%;
-    }
-}
-
-@media (max-width: 570px) {
-    .specific-block {
-        opacity: 100%;
-    }
-    .tittle {
-        position: absolute;
-        top: 50%;
-        left: 40%;
-    }
-}
-
-@media (max-width: 445px) {
-    .specific-block {
-        opacity: 100%;
-    }
-    .tittle {
-        position: absolute;
-        top: 50%;
-        left: 38%;
-    }
-}
-
-@media (max-width: 360px) {
-    .specific-block {
-        opacity: 100%;
-    }
-    .tittle {
-        position: absolute;
-        top: 50%;
-        left: 35%;
-}
 
 /* ===========FOOTERQUERIES=======*/
 
